[project]
name = "rivals-smurf-tracker"
version = "0.3.0"
description = "TUI to keep track of Marvel Rival Alt Accounts"
authors = ["Alex Karwowski <akk96.developer@gmail.com>", "Walter Hart Jr. <wally@walterhart.net>"]
readme = "README.md"
packages = [
    { include = "rivals_smurf_tracker/app" },
]
requires-python = ">=3.12"
dependencies = [
    "sqlmodel>=0.0.22",
    "textual>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "textual-dev>=1.7.0",
]

[tool.cxfreeze]
executables = [
    {script = "./app/rivals_viewer.py", base = "console"}]

[tool.cxfreeze.build_exe]
includes = ["app"]
packages = ["sqlmodel", "sqlalchemy","textual", "textual._tree_sitter"]
excludes = ["pytest", "cx_Freeze", "textual-dev"]
zip_include_packages = ["sqlmodel", "textual"]
